# pluggtoimagescheck

./: duplicada13s.xlsx  duplicadas.xlsx  log.csv  main.py  pyproject.toml  testecentauro2.xlsx
